validator_derive_tests/tests/compile-fail/custom/validate_not_impl_with_args.stderr
error[E0599]: no method named `validate` found for struct `Test` in the current scope
  --> tests/compile-fail/custom/validate_not_impl_with_args.rs:15:10
   |
8  | struct Test {
   | ----------- method `validate` not found for this struct
...
15 |     test.validate();
   |          ^^^^^^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `validate`, perhaps you need to implement it:
           candidate #1: `Validate`
help: there is a method `validate_args` with a similar name, but with different arguments
  --> $WORKSPACE/validator/src/traits.rs
   |
   |     fn validate_args(&self, args: Self::Args) -> Result<(), ValidationErrors>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
